--- a/local/pressure-washing-kirk-sandall.html
+++ b/local/pressure-washing-kirk-sandall.html
@@ -1,1 +1,302 @@
+<!DOCTYPE html>
+<html lang="en-GB">
+<head>
 
+
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width,initial-scale=1" />
+<meta name="robots" content="index, follow">
+<title>Driveway Pressure Washing in Kirk-Sandall Doncaster – Instant Online Quote</title>
+<link rel="icon" href="/favicon.png" type="image/png">
+<link rel="canonical" href="https://homerepairs4u.com/local/pressure-washing-kirk-sandall.html">
+<meta name="description" content="Refresh your driveway, patio, walls, and decking with expert pressure washing in Kirk-Sandall Doncaster. Get your instant online quote today and restore your property’s sparkle!">
+<link rel="preload" as="image" href="/images/home-repairs-4u-doncaster.webp" />
+<style>
+h1 {
+font-size: 2em; /* adjusts size for readability */
+text-align: center;
+margin-bottom: 20px;
+} 
+/* HEADER STYLING */
+header{
+text-align:center;
+padding:25px 10px;
+background:#fff;
+border-bottom:4px solid #27ae60;
+}
+
+.logo{
+max-height:90px;
+width:auto;
+}
+
+/* CALL BUTTON */
+.call-btn{
+display:inline-block;
+margin-top:18px;
+padding:14px 28px;
+background:#000;
+color:#fff;
+font-size:19px;
+text-decoration:none;
+font-weight:bold;
+border-radius:6px;
+border:2px solid #000;
+}
+.call-btn:hover{
+background:#333;
+color:#fff;
+}
+
+/* FOOTER */
+.site-footer{
+background:#000;
+color:#fff;
+text-align:center;
+padding:25px 15px;
+margin-top:40px;
+font-size:14px;
+}
+
+.footer-services{
+background-color: black;
+padding: 20px;
+text-align: center;
+margin-top: 15px;
+}
+
+.footer-services a{
+color: white;
+margin: 0 10px;
+}
+ /* LIGHTBOX STYLING */
+.lightbox {
+display: none; /* Hidden by default */
+position: fixed; /* Stay in place */
+top: 0;
+left: 0;
+width: 100%;
+height: 100%;
+background: rgba(0, 0, 0, 0.8); /* Semi-transparent black overlay */
+justify-content: center; /* Center the image horizontally */
+align-items: center; /* Center the image vertically */
+z-index: 9999; /* On top of everything */
+cursor: pointer; /* Click to close */
+flex-direction: column; /* For image + close button vertically */
+}
+
+.lightbox img {
+max-width: 90%;
+max-height: 90%;
+box-shadow: 0 0 20px rgba(0,0,0,0.5);
+}
+
+.lightbox span {
+position: absolute;
+top: 20px;
+right: 30px;
+color: white;
+font-size: 40px;
+font-weight: bold;
+cursor: pointer;
+user-select: none;
+}
+.header-buttons {
+display: flex;
+flex-direction: column;
+align-items: center;
+gap: 10px;
+}
+</style>
+ 
+<!-- ✅ HEADER -->
+<header>
+<img src="/images/home-repairs-4u-doncaster.webp"
+alt="Home Repairs 4U logo"
+class="logo"
+width="600" height="200"
+loading="eager">
+
+<div style="text-align:center; margin-top:10px;">
+<a href="https://steely1968.github.io/"
+style="font-size:20px; color:#000; text-decoration:none; font-weight:600;">Home</a>
+</div>
+
+<br>
+
+<a href="tel:07735873694" class="call-btn" aria-label="Call Home Repairs 4U on 07735 873694">📞 Call Now: 07735 873694</a>
+<a href="https://homerepairs4u.com/quote-calculator/pressure-washing.html" class="call-btn" aria-label="Get a Quote for Pressure Washing">📝 Get Instant Quote</a>
+</header>
+
+ <!-- ✅ MAIN CONTENT -->
+<main style="max-width:1200px; margin:30px auto; padding:0 15px;">
+
+<!-- Section 1 -->
+<section style="margin-bottom:40px; text-align:center;">
+<h1>Driveway Pressure Washing</h1>
+<h2>Bring Your Driveway Back to Life</h2>
+<p>Is your Kirk-Sandall driveway looking dull or covered in stubborn dirt, moss, or oil stains? Our professional pressure washing service can transform your driveway quickly and effectively. Using the latest high-pressure equipment and eco-friendly cleaning solutions, we remove years of grime, leaving your driveway looking as good as new. Regular pressure washing not only improves the appearance of your property but also prolongs the life of your driveway surface. Whether it’s concrete, block paving, or tarmac, we have the expertise to handle it safely. Choose our Kirk-Sandall team for reliable, thorough pressure washing that enhances your home’s curb appeal and ensures a clean, welcoming entrance every time visitors arrive.</p>
+<p>Our Kirk-Sandall pressure washing experts understand that driveways take a lot of wear and tear. That’s why we focus on precision cleaning that removes dirt without damaging surfaces. With our service, you’ll enjoy a driveway that looks pristine and feels safe underfoot.</p>
+<p>Don’t let a dirty driveway reduce your property’s appeal. Book your Kirk-Sandall pressure washing today and enjoy a spotless, long-lasting finish. Fast, professional, and effective results guaranteed.</p>
+<p>
+<a href="https://homerepairs4u.com/how-to/pressure-wash-driveways.html"
+title="Driveway pressure washing in Kirk-Sandall">
+professional driveway pressure washing services in Kirk-Sandall Doncaster FAQS"></a></p>
+<img src="/images/pressure-washing-driveway.webp"
+alt="Clean driveway in Kirk-Sandall Doncaster after professional pressure washing, showing bright, stain-free surface"
+style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
+onclick="openLightbox(this.src, this.alt)"
+tabindex="0"
+onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
+</section>
+
+<!-- Section 2 -->
+<section style="margin-bottom:40px; text-align:center;">
+<h2>Patio Pressure Washing</h2>
+<h3>Restore Your Patio’s Charm</h3>
+<p>Your Kirk-Sandall patio is the perfect space for relaxing or entertaining, but over time, dirt, algae, and moss can build up and make it look tired. Our patio pressure washing service brings your outdoor area back to life. Using high-quality equipment and eco-friendly solutions, we remove grime safely from stone, concrete, or paving slabs. Pressure washing not only enhances the appearance but also reduces slip hazards, making your patio safer for family and friends. Trust our Kirk-Sandall team to deliver thorough, reliable service. We focus on detail, ensuring every corner and crevice is cleaned to perfection. Enjoy a patio that looks fresh, inviting, and ready for any occasion, all thanks to expert local pressure washing.</p>
+<p>In Kirk-Sandall, patios face the challenge of weather, moss, and everyday dirt. Our pressure washing service tackles these problems efficiently, leaving your patio spotless and rejuvenated. Regular cleaning prevents long-term damage and keeps your outdoor space enjoyable year-round.</p>
+<p>Refresh your Kirk-Sandall patio today with professional pressure washing. Quick, safe, and effective cleaning restores beauty and safety, ready for summer gatherings or quiet outdoor relaxation.</p>
+<p>
+<a href="https://homerepairs4u.com/how-to/pressure-wash-patios.html"
+title="Patio and paving  pressure cleaning in Kirk-Sandall">
+professional patio pressure washing services Kirk-Sandal Doncaster FAQS"</a></p>
+<img src="/images/pressure-washing-patios.webp"
+alt="Patio in Kirk-Sandall Doncaster cleaned with pressure washing, free of moss and dirt, looking refreshed and safe"
+style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
+onclick="openLightbox(this.src, this.alt)"
+tabindex="0"
+onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
+</section>
+
+<!-- Section 3 -->
+<section style="margin-bottom:40px; text-align:center;">
+<h2>House & Garden Wall Pressure Washing</h2>
+<h3>Clean Walls, Brighter Home</h3>
+<p>Your home’s walls and garden boundaries in Kirk-Sandall can quickly accumulate dirt, algae, and weathering marks, affecting the overall look of your property. Our house and garden wall pressure washing service removes years of buildup, revealing bright, clean surfaces underneath. Using controlled pressure washing techniques, we protect delicate brickwork, render, and stone while eliminating grime efficiently. Regular cleaning enhances your home’s appearance and helps maintain property value. With our Kirk-Sandall pressure washing specialists, every wall is treated with care, ensuring consistent, professional results. We pride ourselves on attention to detail, ensuring even hard-to-reach areas are thoroughly cleaned. Trust us to revitalize your walls, creating a welcoming and well-maintained exterior that reflects the pride you take in your home.</p>
+<p>Our Kirk-Sandall team understands the importance of clean walls for a polished exterior. Pressure washing removes algae, mildew, and stains, keeping your property looking fresh and cared for. We treat every wall with precision, ensuring no damage.</p>
+<p>Book house and garden wall pressure washing in Kirk-Sandall today. Restore your walls, improve curb appeal, and enjoy a cleaner, brighter home exterior with our professional service.</p>
+<img src="/images/pressure-washing-walls.webp"
+alt="House and garden walls in Kirk-Sandall Doncaster after pressure washing, showing clean brickwork and clear surfaces"
+style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
+onclick="openLightbox(this.src, this.alt)"
+tabindex="0"
+onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
+</section>
+
+<!-- Section 4 -->
+<section style="margin-bottom:40px; text-align:center;">
+<h2>Decking & Fence Pressure Washing</h2>
+<h3>Bring Your Decks and Fences Back to Life</h3>
+<p>Kirk-Sandall decks and fences can become worn, discoloured, or slippery due to moss, algae, and dirt. Our decking and fence pressure washing service restores their original appearance safely and effectively. Using expert techniques, we clean all types of wood and composite materials, preventing damage while eliminating grime. Pressure washing not only improves aesthetics but also helps prolong the life of your outdoor structures. Whether preparing for summer barbecues or just maintaining your property, our Kirk-Sandall team provides thorough, professional service. With attention to detail, we ensure every plank and panel is treated carefully, leaving your decking and fences looking refreshed, clean, and ready for use.</p>
+<p>Our local Kirk-Sandall pressure washing team tackles dirt and algae buildup on fences and decking, improving both appearance and safety. Regular cleaning preserves materials and keeps your outdoor areas enjoyable.</p>
+<p>Refresh your Kirk-Sandall decking and fencing with expert pressure washing today. Enhance curb appeal, prevent long-term damage, and enjoy outdoor spaces that are clean, safe, and inviting. Our team delivers reliable, high-quality results with every visit.</p>
+<img src="/images/pressure-wash-decking.webp"
+alt="Decking and fence in Kirk-Sandall Doncaster after professional pressure washing, showing clean, revitalized wood"
+style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
+onclick="openLightbox(this.src, this.alt)"
+tabindex="0"
+onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
+</section>
+
+<!-- Section 5 -->
+<section style="margin-bottom:40px; text-align:center;">
+<h2>Professional Pressure Washing in Kirk-Sandall Doncaster</h2>
+<h3>Refresh Your Property with Expert Local Service</h3>
+<p>Transform your Kirk-Sandall property with our professional pressure washing services. From driveways and patios to walls, decking, and fencing, our local team provides thorough, reliable cleaning that restores beauty and safety. We use high-quality, eco-friendly methods to protect your surfaces while removing dirt, moss, and grime. Trust our Kirk-Sandall pressure washing specialists to enhance curb appeal, prevent damage, and deliver long-lasting results. Book your service today for a cleaner, brighter, and more inviting home. With our friendly, local expertise, your property is in safe hands and ready to impress visitors and neighbours alike.</p>
+<p>
+We offer quotes for all our exterior cleaning services, including pressure washing, patio cleaning, and gutter maintenance.
+To get a quote specifically for gutter cleaning or maintenance in Doncaster, visit our
+<a href="https://homerepairs4u.com/guttering-services/doncaster.html" title="Professional Gutter Cleaning Services in Doncaster">Gutter Cleaning Service page</a>.
+</p>
+<div class="lightbox" id="lightbox" role="dialog" aria-modal="true" aria-labelledby="lightboxImg">
+<button class="lightbox-close" onclick="closeLightbox()" aria-label="Close lightbox">×</button>
+<img id="lightboxImg" src="" alt="">
+</div>
+<img src="/images/pressure-washing-algae.webp"
+alt="Various Kirk-Sandall Doncaster property surfaces cleaned with professional pressure washing, showing fresh and bright results"
+style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
+onclick="openLightbox(this.src, this.alt)"
+tabindex="0"
+onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
+</section>
+
+<!-- ✅ BOTTOM CALL BUTTON -->
+<div style="text-align:center; margin:40px 0;">
+<a href="tel:07735873694" class="call-btn" aria-label="Call Home Repairs 4U on 07735 873694">📞 Call Now: 07735 873694</a>
+</div>
+
+</main>
+
+<!-- ✅ FOOTER -->
+<footer class="site-footer">
+© Home Repairs 4U | Askern DN6 | Call 07735 873694
+
+
+</footer>
+ 
+<script type="application/ld+json">
+{
+"@context": "https://schema.org",
+"@type": "LocalBusiness",
+"name": "Home Repairs 4U",
+"image": "https://homerepairs4u.com/images/home-repairs-4u-doncaster.webp",
+"url": "https://homerepairs4u.com/local/pressure-washing-kirk-sandall.html",
+"telephone": "+44-07735-873694",
+"priceRange": "££",
+"address": {
+"@type": "PostalAddress",
+"streetAddress": "35 Airstone Road",
+"addressLocality": "Askern",
+"addressRegion": "Doncaster",
+"postalCode": "DN6 0QA",
+"addressCountry": "GB"
+},
+"geo": {
+"@type": "GeoCoordinates",
+"latitude": 53.5627,
+"longitude": -1.0802
+},
+"areaServed": "Kirk-Sandall",
+"openingHoursSpecification": [
+{
+"@type": "OpeningHoursSpecification",
+"dayOfWeek": [
+"Monday","Tuesday","Wednesday","Thursday","Friday","Saturday","Sunday"
+],
+"opens": "00:00",
+"closes": "23:59"
+}
+],
+"sameAs": [
+"https://www.facebook.com/profile.php?id=61584395621256"
+]
+}
+</script>
+
+<!-- ✅ LIGHTBOX SCRIPT -->
+<script>
+function openLightbox(src, alt){
+const lightbox = document.getElementById("lightbox");
+const lightboxImg = document.getElementById("lightboxImg");
+
+lightbox.style.display = "flex"; // show lightbox
+lightboxImg.src = src; // set the image
+lightboxImg.alt = alt; // ✅ set alt dynamically
+}
+
+function closeLightbox(){
+document.getElementById("lightbox").style.display = "none";
+}
+
+// Optional: close lightbox with Esc key
+document.addEventListener('keydown', function(event) {
+const lightbox = document.getElementById('lightbox');
+if (event.key === "Escape" && lightbox.style.display === "flex") {
+lightbox.style.display = "none";
+}
+});
+</script>
+
+</body>
+</html>
