--- a/local/pressure-washing-mexborough.html
+++ b/local/pressure-washing-mexborough.html
@@ -9,7 +9,7 @@
 <title>Driveway Pressure Washing in Mexborough | Instant Online Quote</title>
 <link rel="icon" href="/favicon.png" type="image/png">
 <link rel="canonical" href="https://homerepairs4u.com/local/pressure-washing-mexborough.html">
-<meta name="keywords" content="pressure washing, Mexborough Doncaster, driveway pressure washing, patio pressure washing, wall pressure washing, decking pressure washing, fence pressure washing">
+<meta name="description" content="Transform your driveway with professional pressure washing in Mexborough. Get a fast, no-obligation online quote today and enjoy a cleaner, brighter exterior instantly!">
 <link rel="preload" as="image" href="/images/home-repairs-4u-doncaster.webp" />
 <style>
 h1 {
